fix: container wrapper small device gap missing

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -17,4 +17,5 @@ a.link:active {
 .wrapper-container {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 0 15px;
 }
